update tmux and zsh settings

--- a/tmux/binds.conf
+++ b/tmux/binds.conf
@@ -1,3 +1,7 @@
+set prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+
 bind-key v split-window -h
 bind-key s split-window -v
  
@@ -36,5 +40,8 @@ bind -n S-Right next-window
 # No delay for escape key press
 set -sg escape-time 0
  
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf
