--- a/tmux/settings.conf
+++ b/tmux/settings.conf
@@ -12,3 +12,7 @@ set -g history-limit 10000
 setw -g mode-keys vi
 setw -g mode-mouse on
 setw -g monitor-activity on
+set -g visual-activity on
+
+# Center the window list
+set -g status-justify centre
