--- a/tmux/binds.conf
+++ b/tmux/binds.conf
@@ -1,6 +1,6 @@
-set prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
+#set prefix C-a
+#unbind-key C-b
+#bind-key C-a send-prefix
 
 bind-key v split-window -h
 bind-key s split-window -v
@@ -41,7 +41,21 @@ bind -n S-Right next-window
 set -sg escape-time 0
  
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind -t vi-copy V rectangle-toggle
+#bind-key -t vi-copy 'y' copy-selection
+#begin osx spec
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+## Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
+
+
