--- a/tmux/settings.conf
+++ b/tmux/settings.conf
@@ -1,6 +1,10 @@
 # 0 is too far from ` ;)
 set -g base-index 1
- 
+set -g pane-base-index 1
+
+# Copy-paste integration
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
@@ -13,6 +17,6 @@ setw -g mode-keys vi
 setw -g mode-mouse on
 setw -g monitor-activity on
 set -g visual-activity on
-
+set display-panes-time 2000
 # Center the window list
 set -g status-justify centre
