modfied on linux

--- a/tmux/binds.conf
+++ b/tmux/binds.conf
@@ -1,6 +1,6 @@
-set prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
+#set prefix C-a
+#unbind-key C-b
+#bind-key C-a send-prefix
 
 bind-key v split-window -h
 bind-key s split-window -v
