--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
 source ~/.tmux/settings.conf
 source ~/.tmux/binds.conf
+source ~/.tmux/bind_linux.conf
 source ~/github/powerline/powerline/bindings/tmux/powerline.conf
