few setting modification

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
 source ~/.tmux/settings.conf
 source ~/.tmux/binds.conf
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux/bind_mac.conf" "source-file ~/.tmux/bind_linux.conf"
 source ~/github/powerline/powerline/bindings/tmux/powerline.conf
+source ~/.tmux/plugins.conf
