--- a/tmux/settings.conf
+++ b/tmux/settings.conf
@@ -17,6 +17,6 @@ setw -g mode-keys vi
 setw -g mode-mouse on
 setw -g monitor-activity on
 set -g visual-activity on
-set display-panes-time 2000
+#set display-panes-time 2000
 # Center the window list
 set -g status-justify centre
