--- a/tmux/settings.conf
+++ b/tmux/settings.conf
@@ -2,8 +2,6 @@
 set -g base-index 1
 set -g pane-base-index 1
 
-# Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Automatically set window title
 set-window-option -g automatic-rename on
@@ -20,3 +18,4 @@ set -g visual-activity on
 #set display-panes-time 2000
 # Center the window list
 set -g status-justify centre
+set -g mouse-utf8 off
