--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,7 @@
 [submodule "tmux/plugins/tmux-resurrect"]
     path = tmux/plugins/tmux-resurrect
     url = https://github.com/tmux-plugins/tmux-resurrect
+
+[submodule "vim/plugged/nerdtree"]
+    path = vim/plugged/nerdtree
+    url = https://github.com/scrooloose/nerdtree
