testing with submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,19 @@
     path = tmux/plugins/tpm
     url = https://github.com/tmux-plugins/tpm
 
+[submodule "tmux/plugins/tmux-resurrect"]
+    path = tmux/plugins/tmux-resurrect
+    url = https://github.com/tmux-plugins/tmux-resurrect
+
+[submodule "vim/bundle/ctrlp.vim"]
+    path = vim/bundle/ctrlp.vim
+    url = https://github.com/kien/ctrlp.vim.git
+
+[submodule "vim/bundle/nerdtree"]
+    path = vim/bundle/nerdtree
+    url = https://github.com/scrooloose/nerdtree.git
+    
+[submodule "vim/bundle/python-mode"]
+    path = vim/bundle/python-mode
+    url = https://github.com/klen/python-mode.git
+
