--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
     path = vim/bundle/python-mode
     url = https://github.com/klen/python-mode.git
 
+[submodule "vim/bundle/syntastic"]
+    path = vim/bundle/syntastic
+    url = https://github.com/scrooloose/syntastic.git
