--- a/tmux/binds.conf
+++ b/tmux/binds.conf
@@ -44,6 +44,16 @@ bind-key -t vi-copy 'v' begin-selection
 bind -t vi-copy V rectangle-toggle
 #bind-key -t vi-copy 'y' copy-selection
 
+# work with vim panes
+
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
