--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,12 @@
 [submodule "vim/bundle/ropevim"]
     path = vim/bundle/ropevim
     url = https://github.com/python-rope/ropevim.git
+
+[submodule "vim/bundle/ack.vim"]
+    path = vim/bundle/ack.vim
+    url = https://github.com/mileszs/ack.vim.git
+
+[submodule "bundle/vim-auto-save"]
+    path = bundle/vim-auto-save
+    url = https://github.com/vim-scripts/vim-auto-save.git
+
