--- a/.gitmodules
+++ b/.gitmodules
@@ -54,7 +54,6 @@
     path = vim/bundle/ack.vim
     url = https://github.com/mileszs/ack.vim.git
 
-[submodule "bundle/vim-auto-save"]
-    path = bundle/vim-auto-save
+[submodule "vim/bundle/vim-auto-save"]
+    path = vim/bundle/vim-auto-save
     url = https://github.com/vim-scripts/vim-auto-save.git
-
