--- a/.gitmodules
+++ b/.gitmodules
@@ -57,3 +57,8 @@
 [submodule "vim/bundle/vim-auto-save"]
     path = vim/bundle/vim-auto-save
     url = https://github.com/vim-scripts/vim-auto-save.git
+
+[submodule "vim/bundle/vim-airline"]
+    path = vim/bundle/vim-airline
+    url = https://github.com/bling/vim-airline
+
